chore(jdk): Add JDK25 as a target for consuming packages